2017-11-13  George G. Vega Yon <g.vegayon@gmail.com>
	* R/bugs.r: New functions to check and coerce attributes
	  viz attributes mostly.

	* R/rgexf.r: Making the code nicer. Implementing
	  new viz attribute checks.


2017-11-08  George G. Vega Yon <g.vegayon@gmail.com>
	* R/igraph.r: Now receives ...
	* R/gexf-js.r: Passing httd.args
	* R/rgexf.r: Changing metadata and new parameter.


2017-11-06  George G. Vega Yon <g.vegayon@gmail.com>
	* Working on next CRAN release. Checking that works with
	  DiagrammeR, and spell checking.
	* Plotting now is made through gexf-js.


2017-11-05  George G. Vega Yon <g.vegayon@gmail.com>
	* Getting ready for next cran release.


2016-11-11  George G. Vega Yon <g.vegayon@gmail.com>
	* R/igraph.r: Removed example downloading data.
	* R/write.gexf: idem.


2016-11-10  George G. Vega Yon <g.vegayon@gmail.com>
	* R/bugs.r: Creating a more generic method for checking viz attrs.
	* R/rgexf.r: Started moving from write.gexf to gexf. In the 2.0
	  version write.gexf should be for exporting gexf graphs only.
	* demo/*.R: Replaced write.gexf with gexf.
	* tests/*: Adding testh_that.


2016-11-09  George G. Vega Yon <g.vegayon@gmail.com>
	* Added ChangeLog
	* Change Depends to Imports and added namespace calls
	* rgexf.r: New option -vers- indicates version of
	  gexf file.